# invar-benchmark

./: .gitignore  README.md  pyproject.toml
configs/control/: CLAUDE.md
configs/treatment/: CLAUDE.md  INVAR.md
docs/: CHANGELOG.md  DESIGN.md
docs/proposals/: BM-01-swe-bench-integration.md  BM-02-interactive-mode-benchmark.md  BM-03-swe-bench-improvements.md
eval/: __init__.py  analysis.py  metrics.py  report.py
harness/: __init__.py  collector.py  config.py  conversation_parser.py  display.py  docker_runner.py  llm_detector.py  models.py  runner.py
scripts/: convert_exercism.py  convert_swe_bench.py  reanalyze_experiment.py  update_difficulty_scores.py
tasks/tier1_standard/: exercism_accumulate.json  exercism_acronym.json  exercism_affine_cipher.json  exercism_all_your_base.json  exercism_allergies.json  exercism_alphametics.json  exercism_anagram.json  exercism_armstrong_numbers.json  exercism_atbash_cipher.json  exercism_beer_song.json  exercism_binary.json  exercism_bob.json  exercism_book_store.json  exercism_bottle_song.json  exercism_change.json  exercism_collatz_conjecture.json  exercism_connect.json  exercism_crypto_square.json  exercism_darts.json  exercism_diamond.json  exercism_difference_of_squares.json  exercism_diffie_hellman.json  exercism_dnd_character.json  exercism_dominoes.json  exercism_dot_dsl.json  exercism_eliuds_eggs.json  exercism_error_handling.json  exercism_etl.json  exercism_flatten_array.json  exercism_food_chain.json  exercism_forth.json  exercism_gigasecond.json  exercism_go_counting.json  exercism_grains.json  (+81 more)
(+51 files in other folders)
