[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "invar-benchmark"
version = "0.1.0"
description = "Benchmark framework for testing Invar framework effectiveness with Claude Code"
readme = "README.md"
requires-python = ">=3.11"

dependencies = [
    "returns>=0.22.0",
    "rich>=13.0.0",
    "tiktoken>=0.5.0",
]

[tool.setuptools.packages.find]
include = ["harness*", "eval*"]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "deal>=4.24.0",
    "ruff>=0.1.0",
]
swe = [
    "datasets>=2.14.0",
    "gitpython>=3.1.0",
]
docker = [
    "swebench>=2.1.0",
]

[project.scripts]
bench-run = "harness.runner:main"
bench-report = "eval.report:main"

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "UP", "B"]
ignore = ["E501"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
